--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,41 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap");
+:root {
+  @apply light;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.dark {
+  --color-bg-primary: hsl(207, 26%, 17%);
+  --color-bg-secondary: hsl(209, 23%, 22%);
+  --color-text-primary: hsl(0, 0%, 100%);
+  --color-text-secondary: hsl(209, 23%, 22%);
+  --color-text-accent: hsl(0, 0%, 100%);
 }
+
+.light {
+  --color-bg-primary: hsl(0, 0%, 98%);
+  --color-bg-secondary: hsl(0, 0%, 100%);
+  --color-text-primary: hsl(200, 15%, 8%);
+  --color-text-secondary: hsl(0, 0%, 100%);
+  --color-text-accent: hsl(200, 15%, 8%);
+}
+::-webkit-scrollbar {
+  width: 8px;
+}
+body {
+  font-family: "Nunito Sans", sans-serif;
+}
+/* Track */
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
